updating to make sure body is positioned on screen to avoid unnecessary scrollbars

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -18,19 +18,37 @@
  * ...
  * 10000: Max (used for polyfills)
  */
+ 
+ *, *::before, *::after {
+  box-sizing: border-box;
+}
+
+html, body, #screen {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body#screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+#noVNC_container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
 
 body {
-  margin:0;
-  padding:0;
   font-family: "Poppins", "Helvetica";
   letter-spacing: 0.05em;
   background: white url('../images/splash.jpg') no-repeat fixed center;
-  height:100%;
   touch-action: none;
-}
-
-html {
-  height:100%;
 }
 
 .noVNC_only_touch.noVNC_hidden {
